Fixed assertion bug

--- a/tex/congestion.bib
+++ b/tex/congestion.bib
@@ -167,17 +167,9 @@
 	pages = {909--914}
 }
 
-@misc{noauthor_moving_2017,
-	title = {Moving average},
-	copyright = {Creative Commons Attribution-ShareAlike License},
-	url = {https://en.wikipedia.org/w/index.php?title=Moving_average&oldid=811481130},
-	abstract = {In statistics, a moving average (rolling average or running average) is a calculation to analyze data points by creating series of averages of different subsets of the full data set. It is also called a moving mean (MM) or rolling mean and is a type of finite impulse response filter. Variations include: simple, and cumulative, or weighted forms (described below).
-Given a series of numbers and a fixed subset size, the first element of the moving average is obtained by taking the average of the initial fixed subset of the number series. Then the subset is modified by "shifting forward"; that is, excluding the first number of the series and including the next value in the subset.
-A moving average is commonly used with time series data to smooth out short-term fluctuations and highlight longer-term trends or cycles. The threshold between short-term and long-term depends on the application, and the parameters of the moving average will be set accordingly. For example, it is often used in technical analysis of financial data, like stock prices, returns or trading volumes. It is also used in economics to examine gross domestic product, employment or other macroeconomic time series. Mathematically, a moving average is a type of convolution and so it can be viewed as an example of a low-pass filter used in signal processing. When used with non-time series data, a moving average filters higher frequency components without any specific connection to time, although typically some kind of ordering is implied. Viewed simplistically it can be regarded as smoothing the data.},
-	language = {en},
-	journal = {Wikipedia},
-	month = nov,
-	year = {2017},
-	note = {Page Version ID: 811481130},
-	file = {Snapshot:/home/max/.zotero/zotero/zzt443zn.default/zotero/storage/5S7A8ZAF/index.html:text/html}
+@article{cho_learning_2014,
+	title = {Learning phrase representations using {RNN} encoder-decoder for statistical machine translation},
+	journal = {arXiv preprint arXiv:1406.1078},
+	author = {Cho, Kyunghyun and Van Merriënboer, Bart and Gulcehre, Caglar and Bahdanau, Dzmitry and Bougares, Fethi and Schwenk, Holger and Bengio, Yoshua},
+	year = {2014}
 }
