--- a/tex/paper.tex
+++ b/tex/paper.tex
@@ -181,7 +181,7 @@ As, for instance, for some applications overall throughput is more important tha
 \item and converge to a stable equilibrium
 \end{enumerate*}.
 
-In a machine learning based congestion control method, each sender uses a set of observed environment conditions to determine which action it should take to maximize his reward in the future. The environment conditions are metrics that the sender can obtain from the network, for example the mean round-trip time of the last received packets, the packet loss rate etc.~or combinations thereof. An action is a change to the sending rate: For example, if a sender perceives an increase in the loss rate it might decide to lower the sending rate. To modulate the sending rate one can  either
+In a machine learning based congestion control method, each sender uses a set of observed environment conditions to determine which action it should take to maximize its reward in the future. The environment conditions are metrics that the sender can obtain from the network, for example the mean round-trip time of the last received packets, the packet loss rate etc.~or combinations thereof. An action is a change to the sending rate: For example, if a sender perceives an increase in the loss rate it might decide to lower the sending rate. To modulate the sending rate one can  either
 \begin{enumerate*}
 \item change the sending rate itself at certain points in time or
 \item maintain a congestion window that indicates the number of packets that can be in flight at a certain point in time
@@ -210,24 +210,24 @@ While using PAL to train an optimum congestion control for a specific range of n
 
 After spending up to a few minutes with suboptimal performance during initial exploration (if no pre-training is used), our approach can compete with established algorithms and achieve superior throughput and an average packet loss of less than 1\%, while still gradually improving and adapting its way of performing congestion control.
 
-Thus we make the three contributions:
+Thus we make three contributions:
 \begin{itemize}
-\item A window based TCP congestion control that acts on a per-acknowledgement basis that can compete with existing congestion control algorithms.
-\item The ability to learn online, offline or a combination of both offline pre-training with online learning. 
-\item A framework for deep reinforcement learning that allows dealing with delayed and partial rewards.
+\item TCP Rax: A reinforcement learning based TCP congestion control algorithm that helps senders to learn a good congestion control strategy autonomously. Our method acts on a per acknowledgement basis and can compete with existing congestion control algorithms.
+\item The ability to learn online, offline or a combination of both: offline pre-training with online learning.
+\item Partial Action Learning (PAL): A new method for deep reinforcement learning that allows dealing with delayed and partial rewards.
 \end{itemize}
 
 \section{Related Work}
 
 \subsection{Congestion Control}
 
-Congestion control has been implemented in TCP since the 1980s as a series of congestion collapses dramatically decreased applications' throughput in the Internet, which lead to the development of the Tahoe and Reno algorithms \cite{jacobson_congestion_1988}. These approaches as well as most others maintain a congestion window which stands for the maximum amount of data that are allowed to be in flight in the network without having been acknowledged by the receiver. In most TCP congestion control algorithms, receiving acknowledgements of data that were successfully transmitted leads to the congestion window being increased while packet loss (or an increase in delay as in the Vegas algorithm \cite{brakmo_tcp_1995}) lead to the congestion window being lowered according to a set of fixed rules. Algorithms such as Cubic and Compound \cite{ha_cubic:_2008, tan_compound_2006} improve congestion control specifically with respect to so-called long fat networks with a high round-trip time and bandwidth. Proportional rate reduction \cite{dukkipati_proportional_2011} aims to make the reduction of the rate that occurs in case of congestion more smooth and steady in time to avoid the bursty behavior that occurred upon loss in previous TCP congestion control variants. A different approach is taken by BBR \cite{cardwell_bbr:_2016}, which does not use a set of fixed rules such as previous congestion control algorithms. Instead it estimates a model of the network path by using measurements of RTT and throughput and then adjusts its sending rate so that it uses the maximum bandwidth according to its network model while trying not to fill up queues. A similar approach is PCC \cite{dong_pcc:_2015}, which also uses measurements to find an optimum sending rate with respect to a defined utility function (e.g. maximizing throughput while minimizing packet loss). However, PCC doesn't maintain a congestion window but instead modulates the sending rate, using one constant sending rate for a certain time span.
+Congestion control has been implemented in TCP since the 1980s as a series of congestion collapses dramatically decreased applications' throughput in the Internet, which lead to the development of the Tahoe and Reno algorithms \cite{jacobson_congestion_1988}. These approaches as well as most others maintain a congestion window which stands for the maximum amount of data that are allowed to be in flight in the network without having been acknowledged by the receiver. In most TCP congestion control algorithms, receiving acknowledgements of data that were successfully transmitted leads to the congestion window being increased while packet loss (or an increase in delay as in the Vegas algorithm \cite{brakmo_tcp_1995}) leads to the congestion window being lowered according to a set of fixed rules. Algorithms such as Cubic and Compound \cite{ha_cubic:_2008, tan_compound_2006} improve congestion control specifically with respect to so-called long fat networks with a high round-trip time and bandwidth. Proportional rate reduction \cite{dukkipati_proportional_2011} aims to make the reduction of the rate that occurs in case of congestion more smooth and steady in time to avoid the bursty behavior that occurred upon loss in previous TCP congestion control variants. A different approach is taken by BBR \cite{cardwell_bbr:_2016}, which does not use a set of fixed rules like previous congestion control algorithms. Instead it estimates a model of the network path by using measurements of RTT and throughput and then adjusts its sending rate so that it uses the maximum bandwidth according to its network model while trying not to fill up queues. A similar approach is PCC \cite{dong_pcc:_2015}, which also uses measurements to find an optimum sending rate with respect to a defined utility function (e.g. maximizing throughput while minimizing packet loss). However, PCC doesn't maintain a congestion window but instead modulates the sending rate, using one constant sending rate for a certain time span.
 
 Besides the aforementioned human-designed algorithms there have been attempts to use machine learning to improve congestion control. \citet{geurts_machine_2004} train a classifier offline to determine whether packet loss is caused by congestion or by the link layer in case of wireless links. If it is caused by the link layer, TCP does not alter the window. Otherwise -- if a packet was lost due to congestion according to the classifier -- it uses a traditional TCP congestion control algorithm. \citet{shaio_reinforcement_2005} use online reinforcement learning to choose a sending rate for multimedia streaming. \citet{winstein_tcp_2013} train a machine learning solution called \textit{Remy} that finds an optimum congestion control for a given range of network parameters. For instance, one could find an optimum congestion control for networks with an RTT of 50-100\,ms and link speeds of 10-20\,Mbit/s. After a lengthy training procedure of several CPU weeks, Remy finds an optimum congestion control algorithm for the specified networks on a per acknowledgement basis (updating the window upon receiving an acknowledgement like traditional congestion control algorithms). 
 
 Our goal is to find an optimum congestion control algorithm on a per acknowledgement basis similar to Remy that, however, can be trained online.  Such a solution could be used in a purely online fashion, in a offline fashion like Remy or a combination of both: One could pre-train a generic congestion control algorithm that works reasonably well for every network that then gets refined during online training according to the current network circumstances. 
 
-To this end we propose Partial Action Learning which is based on the Asynchronous Advantage Actor Critic framework \cite{mnih_asynchronous_2016}, which has been demonstrated to be able to learn to play a wide range of video games and commonly outperform human players. Its use of a neural network enable it to even learn complex tasks. In particular, it is a good choice for congestion control as it has been proven to deliver good performance and high training speed for playing video games and also for networking related tasks such as Adaptive Bitrate Algorithms \cite{mao_neural_2017}. 
+To this end we propose Partial Action Learning which is based on the Asynchronous Advantage Actor Critic framework \cite{mnih_asynchronous_2016}, which has been demonstrated to be able to learn to play a wide range of video games and commonly outperform human players. Its use of a neural network enables it to even learn complex tasks. In particular, it is a good choice for congestion control as it has been proven to deliver good performance and high training speed for playing video games and also for networking related tasks such as Adaptive Bitrate Algorithms \cite{mao_neural_2017}. 
 
 \subsection{Actor Critic Learning}
 \label{subsec:ac}
@@ -247,7 +247,7 @@ R_t = \gamma r_{t} + (1-\gamma) R_{t+1} ,
 %R_t = \left(\left(\sum_{i=0}^{k-1} \gamma^ir_{t+i}\right) + \gamma^k V(s_{t+k}; \theta)\right)\left( 1-\gamma \right).
 \end{align}
 
-To compute $R_t$ at time step $t$ it is necessary to look infinitely far into the future to get all future rewards as in each step $t$ to compute $R_t$ one needs $R_{t+1}$. Thus, one usually only carries out $t_\text{max}$ steps (for example 20), waits for all the rewards and then calculates $R_t$ for each step and uses an estimate of $R_{t_\text{max}+1}$ provided by the critic network as the continuation in the future. The only exception from this is when the task to execute ends before reaching $t_\text{max}$ (e.g. the TCP flow is over). In this case, one can either use a prediction from the critic network as a continuation or alternatively let the moving average end without continuation i.e.~ignoring the term weighted with $(\gamma-1)$ at the last step. 
+To compute $R_t$ at time step $t$ it is necessary to look infinitely far into the future to get all future rewards as in each step $t$ computing $R_{t+1}$ relies on knowing $R_{t+1}$. Thus, the algorithm takes $t_\text{max}$ steps (for example 20), waits for all the rewards and then calculates $R_t$ for each step and uses an estimate of $R_{t_\text{max}+1}$ provided by the critic network as the continuation in the future. The only exception from this is when the task to execute ends before reaching $t_\text{max}$ (e.g. the TCP flow is over). In this case, one can either use a prediction from the critic network as a continuation or alternatively let the moving average end without continuation i.e.~ignore the term weighted with $(\gamma-1)$ at the last step. 
 
 %where $k$ is upper-bounded by $t_\text{max}$ ($t_\text{max}$ is a fixed hyperparameter that indicates how many rewards should be received before updating the neural network). So $R_t$ is the value of the exponentially weighted average of future rewards at time step $t$. In practice this means that we collect $t_\text{max}$ rewards, compute the expected long-term reward starting at each time step, update the neural network and start the same procedure again. 
 
@@ -261,11 +261,11 @@ l_{\text{v},t} = \left(R_t - V(s_t; \theta)\right)^2.
 \subsubsection{Actor Network}
 \label{subsubsec:genericactor}
 
-The Actor Network outputs a normal distribution of the possible values for the action parametrized by a mean $\mu$ and a standard deviation $\sigma$ from which the action $a_t$ at time step $t$ is randomly sampled. The main idea is that the neural network learns to output the right mean of the actions at the right time step to maximize the future reward and that it uses the standard deviation to try out new actions, which could yield a better than expected reward. 
+The Actor Network outputs a normal distribution of possible values for the action parametrized by a mean $\mu$ and a standard deviation $\sigma$. From this distribution each action $a_t$ at time step $t$ is randomly sampled. The main idea is that the neural network learns to output the right mean of the actions at the right time step to maximize future rewards and that it uses the standard deviation to try out new actions, which could yield a better than expected reward. 
 
 Each time we take an action $a_t$ we also let the critic network make an estimation $v_t = V(s_t; \theta)$, given the current neural network weights $\theta$ and the current state $s_t$. The loss function of the actor network can be described as follows: How likely was it to take action $a_t$ given the probability distribution ($\pi$) at time $t$ and how beneficial was this action when comparing it to the critic's estimation? For example, if an action was very successful and highly unlikely, the actor network's weights are updated to make actions like this more likely in the future. 
 
-The actor also aims at increasing the probability density function's entropy ($H\left( \pi\left( s_t; \theta \right)\right) = \frac{1}{2} \log \left( 2 \pi e \sigma^2 \right)$) to encourage exploration: Otherwise the actor could always perform similar actions but never actually take the action that yields the best performance. The actor network will aim to maximize the entropy and at the same time output the best possible action: If it realizes that the entropy is too large and bad actions are taken, it learns to lower the entropy. We designate the entropy as $H$ and introduce a parameter $\beta$ which specifies the magnitude of the influence of the entropy. The loss function of the actor network is defined as follows \cite{mnih_asynchronous_2016}:
+The actor also aims at increasing the probability density function's entropy ($H( \pi( s_t; \theta )) = \frac{1}{2} \log ( 2 \pi e \sigma^2 )$) to encourage exploration: Otherwise the actor could always perform similar actions but never actually take the action that yields the best performance. The actor network will aim to maximize the entropy and at the same time output the best possible action: If it realizes that the entropy is too large and bad actions are taken, it learns to lower the entropy. We designate the entropy as $H$ and introduce a parameter $\beta$ which specifies the magnitude of the influence of the entropy. The loss function of the actor network is defined as follows \cite{mnih_asynchronous_2016}:
 \begin{align}
 \begin{split}
 l_{\text{a},t} =& -\log \left( \pi\left( a_t \given s_t; \theta \right)\right)\left( R_t - V(s_t; \theta) \right)\\ 
@@ -443,7 +443,7 @@ The corresponding expected utility $U_{\text{expected},t}$ is also defined using
 \section{Evaluation}
 
 We implemented TCP Rax as an extension to both the ns-2 network simulator \cite{fall_network_2007} and Remy \cite{winstein_tcp_2013}.  
-In the following evaluation we use a classical dumbbell network topology with one receiver and one or more senders and a shared bottleneck link. As our evaluation focuses on bulk transfers we use equally sized packets of 1250 bytes (TCP and IP including headers). In all figures in the evaluation we use data from at least 50 simulations unless stated otherwise. In case of multiple senders per simulation we randomly sample one sender from each simulation and leave out the others. The reason is that in each simulation the behavior of the senders is correlated. 
+In the following evaluation we use a classical dumbbell network topology with one receiver and one or more senders and a shared bottleneck link. As our evaluation focuses on bulk transfers we use equally sized packets of 1250 bytes (including TCP and IP headers). In all figures in the evaluation we use data from at least 50 simulations unless stated otherwise. In case of multiple senders per simulation we randomly sample one sender from each simulation and leave out the others. The reason is that in each simulation the behavior of the senders is correlated. 
 
 \subsection{Tradeoff between throughput and packet loss}
 
@@ -455,7 +455,7 @@ In the following evaluation we use a classical dumbbell network topology with on
 \includegraphics[width=\columnwidth]{{{/home/max/repos/remy/compute-0-4.local/figures/1_2}}}}{}
 \subfloat[One sender, throughput/packet loss tradeoff of 4\label{fig:one_sender_loss3}]{
 \includegraphics[width=\columnwidth]{{{/home/max/repos/remy/compute-0-4.local/figures/1_4}}}}{}
-\caption{One sender with varying throughput/packet loss tradeoff on a link with 20\,Mbit/s bottleneck speed and 50\,ms RTT and a $\frac{1}{10}$ bandwidth delay buffer. Median in black and $\frac{1}{4}$ and $\frac{3}{4}$ quantile band in gray.}
+\caption{One sender with varying throughput/packet loss tradeoff on a link with 20\,Mbit/s bottleneck speed and 50\,ms RTT and a $\frac{1}{10}$ bandwidth delay buffer. Median in dark color and $\frac{1}{4}$ and $\frac{3}{4}$ quantile band in a light color.}
 \label{fig:one_sender_loss}
 \end{minipage}
 \end{figure}
@@ -470,39 +470,39 @@ The apparent spike of packet loss in the beginning can be explained as follows: 
 \begin{minipage}{\columnwidth}
 \subfloat[Two senders, throughput/packet loss tradeoff of 2\label{fig:multiple_senders1}]{\includegraphics[width=\columnwidth]{{{/home/max/repos/remy/compute-0-6.local/figures/2_2}}}}{}
 \subfloat[Four senders, throughput/packet loss tradeoff of 2\label{fig:multiple_senders2}]{\includegraphics[width=\columnwidth]{{{/home/max/repos/remy/new_gpu/no_loss/figures/4_2}}}}{}
-\caption{Two (\ref{fig:multiple_senders1}) and four (\ref{fig:multiple_senders2}) senders with a bandwidth/packet loss tradeoff of 2 on a link with 20\,Mbit/s bottleneck speed and 50\,ms RTT and a $\frac{1}{10}$ bandwidth delay buffer. Median in black and $\frac{1}{4}$ and $\frac{3}{4}$ quantile band in gray.}
+\caption{Two (\ref{fig:multiple_senders1}) and four (\ref{fig:multiple_senders2}) senders with a bandwidth/packet loss tradeoff of 2 on a link with 20\,Mbit/s bottleneck speed and 50\,ms RTT and a $\frac{1}{10}$ bandwidth delay buffer. Median in dark color and $\frac{1}{4}$ and $\frac{3}{4}$ quantile band in a light color.}
 \label{fig:multiple_senders}
 \end{minipage}
 \end{figure}
 
-While TCP Rax generally does not exhibit much variance after a few minutes of training when it is the only flow on a link, fluctuations and training time needed to achieve good performance increase when having two or four concurrent senders (see \autoref{fig:multiple_senders}). We attribute this to the fact that on a shared link with $n$ senders each can only get $\frac{1}{n}$ of the bandwidth on average and thus each sender receives fewer packets which it can use for training. Furthermore, as the environment becomes more dynamic with more senders, each sender has a harder time learning whether the reward changed due to his own actions or due to actions that were caused by other senders: If there is only one flow on a link, the flow ``can be sure'' that all changes in rewards were actually caused by his own actions. 
+While TCP Rax generally does not exhibit much variance after a few minutes of training when it is the only flow on a link, fluctuations and training time needed to achieve good performance increase when having two or four concurrent senders (see \autoref{fig:multiple_senders}). We attribute this to the fact that on a shared link with $n$ senders each can only get $\frac{1}{n}$ of the bandwidth on average and thus each sender receives fewer packets which it can use for training and therefore training takes longer. Furthermore, as the environment becomes more dynamic with more senders, each sender has a harder time learning whether the reward changed due to his own actions or due to actions that were caused by other senders: If there is only one flow on a link, the flow ``can be sure'' that all changes in rewards were actually caused by his own actions. 
 
 \subsection{Pre-training}
 \label{subsec:pretraining}
 
 \begin{figure}
 \begin{minipage}{\columnwidth}
-\subfloat[One sender, initialized with a neural network from a previous flow with a throughput/packet loss tradeoff of 4\label{fig:resuming_training1}]{\includegraphics[width=\columnwidth]{{{/home/max/repos/remy/compute-0-4.local/figures/1_4_again}}}}{}
-\subfloat[Two senders, initialized with a neural network from a previous flow with a throughput/packet loss tradeoff of 4\label{fig:resuming_training2}]{\includegraphics[width=\columnwidth]{{{/home/max/repos/remy/compute-0-6.local/figures/2_4_again}}}}{}
-\caption{One (\ref{fig:resuming_training1}) and two (\ref{fig:resuming_training2}) senders that were trained with a bandwidth/packet loss tradeoff of 4 on a link with 20\,Mbit/s bottleneck speed and 50\,ms RTT and a $\frac{1}{10}$ bandwidth delay buffer. Median in black and $\frac{1}{4}$ and $\frac{3}{4}$ quantile band in gray.}
+\subfloat[One sender initialized with a neural network from a previous flow with a throughput/packet loss tradeoff of 4\label{fig:resuming_training1}]{\includegraphics[width=\columnwidth]{{{/home/max/repos/remy/compute-0-4.local/figures/1_4_again}}}}{}
+\subfloat[Two senders initialized with a neural network from a previous flow with a throughput/packet loss tradeoff of 4\label{fig:resuming_training2}]{\includegraphics[width=\columnwidth]{{{/home/max/repos/remy/compute-0-6.local/figures/2_4_again}}}}{}
+\caption{One (\ref{fig:resuming_training1}) and two (\ref{fig:resuming_training2}) senders that were trained with a bandwidth/packet loss tradeoff of 4 on a link with 20\,Mbit/s bottleneck speed and 50\,ms RTT and a $\frac{1}{10}$ bandwidth delay buffer. Median in dark color and $\frac{1}{4}$ and $\frac{3}{4}$ quantile band in a light color.}
 \label{fig:resuming_training}
 \end{minipage}
 \end{figure}
 
-To verify whether pre-training is generally feasible, we used the neural networks that were produced after each 600 seconds flow shown in figure \autoref{fig:multiple_senders} and started flows of equal length with the pre-trained neural networks. The flows seem to simply resume where they ended training in the flow before (see \autoref{fig:resuming_training}). This does not seem like a remarkable finding, however, it is quite unexpected: For instance, in the case of one sender on a link, the neural network starts with random weights and discovers that it achieves optimum utility at a window that results in 20\,Mbit/s of bandwidth. Then the sender constantly stays in this state and one would expect it to slowly ``forget'' what it learned in the very beginning when it started the flow. Thus, it is interesting that after hundreds of seconds of only seeing one same state, the neural network still acts correctly when starting with a small congestion window again in a completely different state than the one it was used to for hundreds of seconds before. For two senders pre-training also greatly speeds up the initial training procedure and can avoid the spike of packet loss in the beginning that always occurs to some extent without pre-training (see \autoref{fig:one_sender_loss} and \autoref{fig:multiple_senders}). However, it also becomes apparent that variance is large when comparing to the non-pre-trained version. We argue that the reason for this is that one sender rapidly claims all bandwidth in the very beginning leaving the other senders with nothing. 
+To verify whether pre-training is generally feasible, we used the neural networks that were produced after each 600 second flow shown in \autoref{fig:multiple_senders} and started flows of equal length with the pre-trained neural networks. The flows seem to simply resume where they ended training in the flow before (see \autoref{fig:resuming_training}). This does not seem like a remarkable finding, however, it is quite unexpected: For instance, in the case of one sender on a link, the neural network starts with random weights and discovers that it achieves optimum utility at a window that results in 20\,Mbit/s of bandwidth. Then the sender constantly stays in this state and one would expect it to slowly ``forget'' what it learned in the very beginning when it started the flow. Thus, it is interesting that after hundreds of seconds of only seeing one same state, the neural network still acts correctly when starting with a small congestion window again in a completely different state than the one it was used to for hundreds of seconds before. For two senders pre-training also greatly speeds up the initial training procedure and can avoid the spike of packet loss in the beginning that always occurs to some extent without pre-training (see \autoref{fig:one_sender_loss} and \autoref{fig:multiple_senders}). Pre-training also works for more than one flow and although TCP Rax learns to minimize packet loss even further (see Figure \ref{fig:multiple_senders2}) some variability in throughput remains. We argue that this is caused by the stochastic behavior of the reinforcement learning: While each sender aims to maximize its utility, at the same time it also tries out new actions to check whether they could improve its utility even further and this behavior results in fluctuations. 
 
 \subsection{Stochastic Loss}
 
 \begin{figure}
 \begin{minipage}{\columnwidth}
-\subfloat[One sender sharing a link with a stochastic loss rate of 1\% with a throughput/packet loss tradeoff of 4\label{fig:stochastic_loss1}]{\includegraphics[width=\columnwidth]{{{/home/max/repos/remy/compute-0-5.local/figures/1_4}}}}{}
+\subfloat[One sender on a link with a stochastic loss rate of 1\% with a throughput/packet loss tradeoff of 4\label{fig:stochastic_loss1}]{\includegraphics[width=\columnwidth]{{{/home/max/repos/remy/compute-0-5.local/figures/1_4}}}}{}
 \subfloat[Two senders sharing a link with a stochastic loss rate of 1\% with a throughput/packet loss tradeoff of 4\label{fig:stochastic_loss2}]{\includegraphics[width=\columnwidth]{{{/home/max/repos/remy/compute-0-7.local/figures/2_4}}}}{}
-\caption{One (\ref{fig:stochastic_loss1}) and two (\ref{fig:stochastic_loss2}) senders on a link with a stochastic loss rate of 1\%, a bandwidth/packet loss tradeoff of 4 on a link with 20\,Mbit/s bottleneck speed and 50\,ms RTT and a $\frac{1}{10}$ bandwidth delay buffer. Median in black and $\frac{1}{4}$ and $\frac{3}{4}$ quantile band in gray. Apparently there is no stochastic loss in the very beginning of the flows, however, this is an artifact of the binning procedure (we use bins of one second): As the window is very small in the beginning, there are many flows in which no packet loss occurs whatsoever in the first bins and thus the median is distorted.}
+\caption{One (\ref{fig:stochastic_loss1}) and two (\ref{fig:stochastic_loss2}) senders on a link with a stochastic loss rate of 1\%, a bandwidth/packet loss tradeoff of 4 on a link with 20\,Mbit/s bottleneck speed and 50\,ms RTT and a $\frac{1}{10}$ bandwidth delay buffer. Median in dark color and $\frac{1}{4}$ and $\frac{3}{4}$ quantile band in a light color. Apparently there is no stochastic loss in the very beginning of the flows, however, this is an artifact of the binning procedure (we use bins of one second): As the window is very small in the beginning, there are many flows in which no packet loss occurs whatsoever in the first bins and thus the median is distorted towards 0.}
 \label{fig:stochastic_loss}
 \end{minipage}
 \end{figure}
 
-We also verify whether stochastic loss has an influence on TCP Rax. For this, we randomly dropped 1\% of packets on the link and it seems as if stochastic loss does not substantially affect TCP Rax. This can be attributed to the fact that the reinforcement learning realizes that a certain minimum packet loss rate is ``normal'' and cannot be avoided and thus TCP Rax can learn to distinguish packet loss that is caused by congestion from packet loss that is purely stochastic (as for example caused by errors on the physical layer). 
+We also verify whether stochastic packet loss on the link has an influence on TCP Rax. For this, we randomly dropped 1\% of packets on the link and it seems as if stochastic loss does not substantially affect TCP Rax. This can be attributed to the fact that the reinforcement learning realizes that a certain minimum packet loss rate is ``normal'' and cannot be avoided and thus TCP Rax can learn to distinguish packet loss that is caused by congestion from packet loss that is purely stochastic (as for example caused by errors on the physical layer). 
 
 \subsection{Comparison with other TCP congestion control variants}
 
@@ -514,7 +514,7 @@ For reasons of comparability we take the same scenario of a 20\,Mbit/s shared bo
 ]{\includegraphics[width=\columnwidth]{{{/home/max/repos/ns-allinone-2.35/ns-2.35/tcl/ex/congctrl/regular-tcp/nam_traces/figures/all_together_1_0}}}}{}
 \subfloat[TCP Compound, Cubic and New Reno and Rax's total throughput and loss rate for each sender with two senders in a simulation of 600\,s\label{fig:regular_tcps2}
 ]{\includegraphics[width=\columnwidth]{{{/home/max/repos/ns-allinone-2.35/ns-2.35/tcl/ex/congctrl/regular-tcp/nam_traces/figures/all_together_2_0}}}}{}
-\caption{Total throughput and loss rate ($\frac{\text{all packets lost}}{\text{all packets sent}}$) for one (\ref{fig:regular_tcps1}) and two (\ref{fig:regular_tcps2})senders of TCP Cubic/Compound/New Reno and Rax with a throughput/packet loss tradeoff of 4 without pre-training on a link with 20\,Mbit/s bottleneck speed and 50\,ms RTT and a $\frac{1}{10}$ bandwidth delay buffer. For a flow of 600\,s the maximum possible throughput is 12\,000\,Mbit. For TCP Rax we use the mean over 50 simulation runs, while for the other TCP congestion control variants we use only one run because we use a deterministic simulator.}
+\caption{Total throughput and loss rate ($\frac{\text{all packets lost}}{\text{all packets sent}}$) for one (\ref{fig:regular_tcps1}) and two (\ref{fig:regular_tcps2}) senders of TCP Cubic/Compound/New Reno and Rax with a throughput/packet loss tradeoff of 4 without pre-training on a link with 20\,Mbit/s bottleneck speed and 50\,ms RTT and a $\frac{1}{10}$ bandwidth delay buffer. For a flow of 600\,s the maximum possible throughput is 12\,000\,Mbit. For TCP Rax we use the mean over 50 simulation runs, while for the other TCP congestion control variants we use only one run because we use a deterministic simulator.}
 \label{fig:regular_tcps}
 \end{minipage}
 \end{figure}
@@ -532,13 +532,15 @@ For reasons of comparability we take the same scenario of a 20\,Mbit/s shared bo
 
 \section{Discussion}
 
-Our results demonstrate that our proposed concept can perform online learning of congestion control and can outperform existing congestion control algorithms in certain scenarios, although a larger number of senders make the reinforcement learning significantly more challenging and time consuming. Regarding online learning, during the implementation of TCP Rax we came to the conclusion that a neural network consisting of LSTM cells \cite{gers_learning_1999} is not feasible. LSTM cells keep an internal state that gets unstable when it is used for long training episodes, as for each received acknowledgement the LSTM state has to be updated. Previous work using deep reinforcement learning uses up to 50 million training steps for offline learning \cite{mnih_asynchronous_2016} while we generally use significantly less (a 20 Mbit\,s link can carry a maximum of up to one million packets of 1250 bytes size in 10 minutes). When sharing the link between several senders, each sender receives only a fraction of these packets for training. For example, with two senders on one link (see Figure \ref{fig:multiple_senders2}) one sender can receive a maximum of 600\,000 packets during a ten minute flow for training. We argue that the reason for TCP Rax needing fewer training samples than other reinforcement learning tasks is that in congestion control rewards are steadily coming in, while for other tasks, such as video games, commonly rewards are only received sparsely (e.g. one has to wait until the game is over to determine whether one won or lost the game).
+Our results demonstrate that our proposed concept can perform online learning of congestion control and can outperform existing congestion control algorithms in certain scenarios. Our results also show that with an increasing number of senders the reinforcement learning becomes significantly more challenging and time consuming. Regarding online learning, during the implementation of TCP Rax it became apparent that a neural network consisting of LSTM cells \cite{gers_learning_1999} is not feasible. LSTM cells keep an internal state that gets unstable when it is used for long training episodes, as for each received acknowledgement the LSTM state has to be updated. Previous work using deep reinforcement learning uses up to 50 million training steps for offline learning \cite{mnih_asynchronous_2016} while we generally use significantly less (a 20 Mbit/s link can carry a maximum of up to one million packets of 1250 bytes size in 10 minutes). When sharing the link between several senders, each sender receives only a fraction of these packets for training. For example, with two senders on one link (see Figure \ref{fig:multiple_senders2}) one sender can receive a maximum of 600\,000 packets during a ten minute flow for training. We argue that the reason for TCP Rax needing fewer training samples than other reinforcement learning tasks is that in congestion control rewards are steadily coming in, while for other tasks, such as video games, commonly rewards are only received sparsely (e.g. one has to wait until the game is over to determine whether one won or lost the game).
 
 \section{Conclusion}
 
-In this paper we show that it is possible to use deep reinforcement learning to learn a per-acknowledgement congestion control online. To this end we had to modify existing reinforcement learning algorithms to accommodate the specific needs of congestion control such as the inherent delay and proposed Partial Action Learning, a framework that allows deep reinforcement learning with delayed and partial rewards. 
+%In this paper we show that it is possible to use deep reinforcement learning to learn a per acknowledgement congestion control online. To this end we had to modify existing reinforcement learning algorithms to accommodate the specific needs of congestion control such as the inherent delay and proposed Partial Action Learning, a framework that allows deep reinforcement learning with delayed and partial rewards. 
 
-We developed TCP Rax and the results of our evaluation indicate that congestion control can be learned online and has the potential to outperform standard TCP variants for significantly large flows. We came to the insight that it is possible to pre-train the neural network used in the reinforcement learning and that this improves performance especially in the beginning of the flow. However, TCP Rax can also compete with other congestion control variants after an initial exploration phase without pre-training.
+In this paper we show that it is possible to use deep reinforcement learning to learn a per acknowledgement congestion control strategy online. In order to achieve this we had to modify existing reinforcement learning algorithms to accommodate the specific needs of congestion control such as the inherent delay and proposed Partial Action Learning (PAL), a new method that allows deep reinforcement learning with delayed and partial rewards.
+
+We developed TCP Rax and the results of our evaluation show that congestion control can be learned online and that it can outperform standard TCP variants for large flows. With TCP Rax it is possible to pre-train the neural network used in the reinforcement learning and this improves performance especially in the beginning of the flow. However, TCP Rax can also compete with other congestion control variants after an initial exploration phase without pre-training.
 
 \section*{Appendix}	
 
