--- a/tex/congestion.bib
+++ b/tex/congestion.bib
@@ -173,3 +173,31 @@
 	author = {Cho, Kyunghyun and Van Merriënboer, Bart and Gulcehre, Caglar and Bahdanau, Dzmitry and Bougares, Fethi and Schwenk, Holger and Bengio, Yoshua},
 	year = {2014}
 }
+
+@article{xu_experience-driven_2018,
+	title = {Experience-driven {Networking}: {A} {Deep} {Reinforcement} {Learning} based {Approach}},
+	shorttitle = {Experience-driven {Networking}},
+	url = {http://arxiv.org/abs/1801.05757},
+	abstract = {Modern communication networks have become very complicated and highly dynamic, which makes them hard to model, predict and control. In this paper, we develop a novel experience-driven approach that can learn to well control a communication network from its own experience rather than an accurate mathematical model, just as a human learns a new skill (such as driving, swimming, etc). Specifically, we, for the first time, propose to leverage emerging Deep Reinforcement Learning (DRL) for enabling model-free control in communication networks; and present a novel and highly effective DRL-based control framework, DRL-TE, for a fundamental networking problem: Traffic Engineering (TE). The proposed framework maximizes a widely-used utility function by jointly learning network environment and its dynamics, and making decisions under the guidance of powerful Deep Neural Networks (DNNs). We propose two new techniques, TE-aware exploration and actor-critic-based prioritized experience replay, to optimize the general DRL framework particularly for TE. To validate and evaluate the proposed framework, we implemented it in ns-3, and tested it comprehensively with both representative and randomly generated network topologies. Extensive packet-level simulation results show that 1) compared to several widely-used baseline methods, DRL-TE significantly reduces end-to-end delay and consistently improves the network utility, while offering better or comparable throughput; 2) DRL-TE is robust to network changes; and 3) DRL-TE consistently outperforms a state-ofthe-art DRL method (for continuous control), Deep Deterministic Policy Gradient (DDPG), which, however, does not offer satisfying performance.},
+	journal = {arXiv:1801.05757 [cs]},
+	author = {Xu, Zhiyuan and Tang, Jian and Meng, Jingsong and Zhang, Weiyi and Wang, Yanzhi and Liu, Chi Harold and Yang, Dejun},
+	month = jan,
+	year = {2018},
+	note = {arXiv: 1801.05757},
+	keywords = {Computer Science - Artificial Intelligence, Computer Science - Learning, Computer Science - Networking and Internet Architecture},
+	annote = {Comment: 9 pages, 12 figures, paper is accepted as a conference paper at IEEE Infocom 2018},
+	file = {arXiv\:1801.05757 PDF:/home/max/.zotero/zotero/zzt443zn.default/zotero/storage/CZJD3DW5/Xu et al. - 2018 - Experience-driven Networking A Deep Reinforcement.pdf:application/pdf;arXiv.org Snapshot:/home/max/.zotero/zotero/zzt443zn.default/zotero/storage/82BAMQER/1801.html:text/html}
+}
+
+@inproceedings{sutton_policy_1999,
+	address = {Cambridge, MA, USA},
+	series = {{NIPS}'99},
+	title = {Policy {Gradient} {Methods} for {Reinforcement} {Learning} with {Function} {Approximation}},
+	url = {http://dl.acm.org/citation.cfm?id=3009657.3009806},
+	abstract = {Function approximation is essential to reinforcement learning, but the standard approach of approximating a value function and determining a policy from it has so far proven theoretically intractable. In this paper we explore an alternative approach in which the policy is explicitly represented by its own function approximator, independent of the value function, and is updated according to the gradient of expected reward with respect to the policy parameters. Williams's REINFORCE method and actor-critic methods are examples of this approach. Our main new result is to show that the gradient can be written in a form suitable for estimation from experience aided by an approximate action-value or advantage function. Using this result, we prove for the first time that a version of policy iteration with arbitrary differentiable function approximation is convergent to a locally optimal policy.},
+	booktitle = {Proceedings of the 12th {International} {Conference} on {Neural} {Information} {Processing} {Systems}},
+	publisher = {MIT Press},
+	author = {Sutton, Richard S. and McAllester, David and Singh, Satinder and Mansour, Yishay},
+	year = {1999},
+	pages = {1057--1063}
+}
